--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	email = sondresalvestad@gmail.com
-	name = Sondre Alvestad
+	email = 72634505+Donnerinoern@users.noreply.github.com
+	name = Donnerinoern
 [init]
 	defaultBranch = main
